Change licence to CC BY-SA, fix scrollwheel bug, fix overflow bug, update information card styles

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -15,6 +15,7 @@ $header_img_height: 3rem;
 
   padding-top: $header_padding;
   padding-bottom: $header_padding;
+  width: 100vw;
 
   // Left column
   div:first-of-type {
